// Users API client
// Basic implementation to resolve import errors

export interface User {
  id: string;
  email: string;
  name: string;
  role: string;
  createdAt: string;
  updatedAt: string;
}

export interface UserProfile {
  id: string;
  userId: string;
  bio?: string;
  location?: string;
  website?: string;
  skills: string[];
}

// Mock API functions - should be replaced with actual API calls
export const getUsers = async (): Promise<User[]> => {
  return [];
};

export const getUserById = async (id: string): Promise<User | null> => {
  return null;
};

export const getCurrentUser = async (): Promise<User | null> => {
  return null;
};

export const updateUser = async (id: string, data: Partial<User>): Promise<User> => {
  throw new Error('User update not implemented');
};

export const deleteUser = async (id: string): Promise<void> => {
  throw new Error('User deletion not implemented');
};

export const getUserProfile = async (userId: string): Promise<UserProfile | null> => {
  return null;
};

export const updateUserProfile = async (userId: string, data: Partial<UserProfile>): Promise<UserProfile> => {
  throw new Error('Profile update not implemented');
};